# SpatialForce

./: CMakeLists.txt  README.md  vcpkg.json
apps/: CMakeLists.txt  main.cpp
core/: CMakeLists.txt  array.h  define.h  fixed_array.h  mat.h  quat.h  tmp.cpp  vec.h
fields/: CMakeLists.txt  geometry.h  geometry_trait.h  grid.h  grid_data.h  grid_system_data.h  mesh.h  poly_info.h  poly_info_1d.h  poly_info_2d.h  poly_info_3d.h  recon_auxiliary.h  surface_integrator.h  template_geometry.h  tmp.cu  volume_integrator.h
fields/host/: geometry_host.cu  geometry_host.h  grid_data_host.cu  grid_data_host.h  grid_host.cu  grid_host.h  grid_system_data_host.cu  grid_system_data_host.h  mesh_host.cu  mesh_host.h  poly_info_1d_host.cu  poly_info_1d_host.h  poly_info_2d_host.cu  poly_info_2d_host.h  poly_info_3d_host.cu  poly_info_3d_host.h  poly_info_host.h  recon_auxiliary_host.cu  recon_auxiliary_host.h
fields/io/: gmsh2d_io.cpp  gmsh2d_io.cu  gmsh2d_io.h  io_mesh.cpp  io_mesh.cu  io_mesh.h  io_mesh_1d.cpp  io_mesh_1d.cu  io_mesh_1d.h
fields/templates/: interval.h  tetrahedron.h  triangle.h
math/: CMakeLists.txt  bounding_box-inl.h  bounding_box.h  constants.h  cuda_std_array-inl.h  cuda_std_array.h  functors-inl.h  functors.h  math_utils-inl.h  math_utils.h  matrix-inl.h  matrix.h  matrix_dense_base-inl.h  matrix_dense_base.h  matrix_expression-inl.h  matrix_expression.h  nested_initializer_list.h  quaternion-inl.h  quaternion.h  ray.h  spatial_matrix.h  spatial_vector.h  tmp.cpp  tmp.cu  transform.cu  transform.h  type_helpers.h
rigidbody/: CMakeLists.txt  inertia.cu  inertia.h  joint.cu  joint.h  model_builder.cu  model_builder.h  muscle.cu  muscle.h  particles.cu  particles.h
runtime/: CMakeLists.txt  buffer.h  cuda_buffer-inl.h  cuda_buffer.h  cuda_tensor-inl.h  cuda_tensor.h  cuda_tensor_base-inl.h  cuda_tensor_base.h  cuda_tensor_view-inl.h  cuda_tensor_view.h  cuda_texture-inl.h  cuda_texture.h  cuda_util.cu  cuda_util.h  device.cu  device.h  event.cu  event.h  graph.cu  graph.h  launch_box.h  launch_params.h  stream.cu  stream.h  transform.h
shape/: CMakeLists.txt  bounding_box-inl.h  bounding_box.h  bvh.h  bvh_host.cu  bvh_host.h  intersect.h  intersect_tri.h  radix_sort.cu  radix_sort.h  ray-inl.h  ray.h
tensor/: CMakeLists.txt  array-inl.h  array.h  array_samplers-inl.h  array_samplers.h  array_utils-inl.h  array_utils.h  array_view-inl.h  array_view.h  cuda_tensor-inl.h  cuda_tensor.h  cuda_tensor_view-inl.h  cuda_tensor_view.h  iteration_utils-inl.h  iteration_utils.h  tensor-inl.h  tensor.h  tensor_samplers-inl.h  tensor_samplers.h  tensor_utils-inl.h  tensor_utils.h  tensor_view-inl.h  tensor_view.h  type_helpers.h
tests/: CMakeLists.txt  cuda_gtest_plugin.h  device_tests.cu  main.cpp  tests_utils.cu  tests_utils.h
tests/fields/: compile_tests.cu  volume_integrator_tests.cu
tests/io/: gmsh_io.tests.cpp
tests/math/: bounding_box2_tests.cu  bounding_box3_tests.cu  bounding_box_tests.cu  math_utils_tests.cu  matrix2x2_tests.cu  matrix3x3_tests.cu  matrix4x4_tests.cu  matrix_tests.cu  quaternion_tests.cu  ray2_tests.cu  ray3_tests.cu  transform2_tests.cu  transform3_tests.cu  vector2_tests.cu  vector3_tests.cu  vector4_tests.cu  vector_tests.cu
tests/runtime/: buffer_tests.cu  cuda_tensor1_tests.cu  cuda_tensor2_tests.cu  cuda_tensor3_tests.cu  device_tests.cu  tensor_tests.cu
tests/shape/: bounding_box2_tests.cu  bounding_box3_tests.cu  bounding_box_tests.cu  ray2_tests.cu  ray3_tests.cu
tests/tensor/: array1_tests.cu  array2_tests.cu  array3_tests.cu  array_accessor1_tests.cu  array_accessor2_tests.cu  array_accessor3_tests.cu  array_samplers_tests.cu  array_utils_tests.cu  array_view_tests.cu  tensor1_tests.cu  tensor2_tests.cu  tensor3_tests.cu  tensor_accessor1_tests.cu  tensor_accessor2_tests.cu  tensor_accessor3_tests.cu  tensor_samplers_tests.cu  tensor_utils_tests.cu  tensor_view_tests.cu
visualization/: CMakeLists.txt  interactor.cpp  interactor.h  renderer.cpp  renderer.h  visualization.cpp  visualization.h  windows.cpp  windows.h
